@@ -1,2 +1,34 @@
 # Bài tập lớn OOP - Bomberman Game
+# Bomberman
+# ☘ Contributors
+- [Khương Vũ Trâm Anh (21020104) -K66-C-A-CLC3.](https://github.com/tramanh1511)
+- [Đinh Thị Trà My (21020049) -K66-C-A-CLC2.](https://github.com/tramy132)
+- [Đỗ Thị Trang (210215450 -K66-C-A-CLC2.](https://github.com/ChuppySuidae)
 
+![image](https://user-images.githubusercontent.com/100174761/195342348-7a4adea1-0755-45b5-94e8-8d3a298187e5.png)
+
+- Link github: https://github.com/tramanh1511/Bomberman.git
+# ☘ Introduction
+- Bài tập lớn - Bomberman (UET) - INT2204 44 - Lập trình hướng đối tượng
+
+# ☘ Features
+- Người chơi tự di chuyển Bomber.
+- Có thể để 2 người chơi cùng nhau.
+- Đặt và kích hoạt Bomb.
+- Có các Enemy cản trở người chơi đến vị trí Portal.
+- Có các Item cũng được giấu phía sau Brick và chỉ hiện ra khi Brick bị phá hủy.
+- ...
+
+# ☘Technologies
+- IntelliJ IDEA Community Edition 2022.
+- JavaFX vesion 19.
+
+# ☘Guide
+- Run -> Edit Configurations... -> Add new run configuration... -> Application
+- Main class: Main.java
+- Name: Main
+- Modify options -> Add VM options VM options: -module-path "\path\to\javafx-sdk-19\lib" --add-modules javafx.controls,javafx.fxml
+	
+# ☘Preview
+
+![image](https://user-images.githubusercontent.com/100174761/195336550-e3053a8b-f775-41c3-8ae9-de2eae6335a2.png)
